# PgsPlusPlus

./: .clang-format  .gitignore  AUTHORS  CHANGELOG.md  CMakeLists.txt  Doxyfile  ObjectDefinition.cpp  ObjectDefinition.hpp  PaletteDefinition.cpp  PresentationComposition.cpp  PresentationComposition.hpp  README.md  Segment.cpp  Segment.hpp  SegmentData.hpp  conanfile.py  pgs.c  pgs.cpp  pgs.h  pgs.hpp
.circleci/: config.yml
build-release/: .ninja_deps  .ninja_log  CMakeCache.txt  CTestTestfile.cmake  DartConfiguration.tcl  build.ninja  cmake_install.cmake  rules.ninja
build-release/Testing/Temporary/: CTestCostData.txt
build-release/src/: cmake_install.cmake
build-release/test/: CTestTestfile.cmake  cmake_install.cmake
cmake/: pgs++Config.cmake  pgs++Config.cmake.in
doc/html/: ObjectDefinition_8hpp_source.html  PresentationComposition_8hpp_source.html  Segment_8hpp_source.html  WindowDefinition_8hpp_source.html  annotated.html  classPgs_1_1CompositionObject-members.html  classPgs_1_1CompositionObject.js  classPgs_1_1ImportException-members.html  classPgs_1_1ImportException.html  classPgs_1_1PaletteDefinition.html  classPgs_1_1PaletteDefinition.js  classPgs_1_1PaletteEntry-members.html  classPgs_1_1PaletteEntry.html  classPgs_1_1PaletteEntry.js  classPgs_1_1Segment.js  classPgs_1_1SegmentData.html  classPgs_1_1WindowDefinition.html  classPgs_1_1WindowObject-members.html  classPgs_1_1WindowObject.js  files_dup.js  functions_func.html  hierarchy.html  md_README.html  pages.html  pgs_8h_source.html  pgs_8hpp_source.html  structPgsCompositionObject-members.html  structPgsCompositionObject.html  structPgsCompositionObject.js  structPgsObjectDefinition-members.html  structPgsObjectDefinition.html  structPgsObjectDefinition.js  structPgsPaletteDefinition-members.html  structPgsPaletteDefinition.html  structPgsPaletteDefinition.js  structPgsPaletteEntry-members.html  structPgsPaletteEntry.html  structPgsPaletteEntry.js  structPgsPresentationComposition-members.html  structPgsPresentationComposition.html  (+13 more)
doc/html/search/: all_1.js  all_3.js  all_5.js  all_6.js  all_7.js  all_9.js  all_a.js  all_c.js  all_d.js  all_e.js  classes_0.js  classes_2.js  classes_4.js  classes_5.js  functions_2.js  functions_5.js  functions_6.js  pages_0.js  variables_1.js  variables_3.js  variables_4.js  variables_5.js  variables_9.js  variables_b.js  variables_c.js  variables_d.js
docs/: index.html  index.md
docs/html/: ObjectDefinition_8hpp_source.html  PaletteDefinition_8hpp_source.html  PgsUtil_8hpp_source.html  PresentationComposition_8hpp_source.html  SegmentData_8hpp_source.html  Segment_8hpp_source.html  Subtitle_8hpp_source.html  WindowDefinition_8hpp_source.html  annotated.html  annotated_dup.js  classPgs_1_1CompositionObject-members.html  classPgs_1_1CompositionObject.html  classPgs_1_1CompositionObject.js  classPgs_1_1CreateError-members.html  classPgs_1_1CreateError.html  classPgs_1_1CreateError.js  classPgs_1_1ImportException-members.html  classPgs_1_1ImportException.html  classPgs_1_1ImportException.js  classPgs_1_1ObjectDefinition-members.html  classPgs_1_1ObjectDefinition.html  classPgs_1_1ObjectDefinition.js  classPgs_1_1PaletteDefinition-members.html  classPgs_1_1PaletteDefinition.html  classPgs_1_1PaletteDefinition.js  classPgs_1_1PaletteEntry-members.html  classPgs_1_1PaletteEntry.html  classPgs_1_1PaletteEntry.js  classPgs_1_1PresentationComposition-members.html  classPgs_1_1PresentationComposition.html  classPgs_1_1PresentationComposition.js  classPgs_1_1Segment-members.html  classPgs_1_1Segment.html  classPgs_1_1Segment.js  classPgs_1_1SegmentData-members.html  classPgs_1_1SegmentData.html  classPgs_1_1SegmentData.js  classPgs_1_1Subtitle-members.html  classPgs_1_1Subtitle.html  classPgs_1_1Subtitle.js  (+21 more)
docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  pages_0.js  searchdata.js  variables_0.js  variables_1.js  variables_2.js  variables_3.js  (+11 more)
include/: CMakeLists.txt  pgs.hpp
src/: CMakeLists.txt  ObjectDefinition.cpp  ObjectDefinition.hpp  PaletteDefinition.cpp  PaletteDefinition.hpp  PgsUtil.cpp  PgsUtil.hpp  PresentationComposition.cpp  PresentationComposition.hpp  Segment.cpp  Segment.hpp  SegmentData.cpp  SegmentData.hpp  Subtitle.cpp  Subtitle.hpp  WindowDefinition.cpp  WindowDefinition.hpp  pgs.cpp  pgs.hpp
test/: CMakeLists.txt  PgsTest.cpp  SubtitleTest.cpp  pgs_test.c  pgs_test.cpp
test/res/: pcs.sup  subs_short.sup
test_package/: conanfile.py  example.cpp
